project/input/tiny_grammar.txt
program -> stmt-sequence
stmt-sequence -> stmt-sequence _semicolon statement | statement
statement -> if-stmt | repeat-stmt | assign-stmt | read-stmt | write-stmt
if-stmt -> _if exp _then stmt-sequence _end | _if exp _then stmt-sequence _else stmt-sequence _end
repeat-stmt -> _repeat stmt-sequence _until exp
assign-stmt -> _identifier _assign exp
read-stmt -> _read _identifier
write-stmt -> _write exp
exp -> simple-exp comparison-op simple-exp | simple-exp
comparison-op -> _less | _greater | _equal | _less_equal | _not_equal | _greater_equal
simple-exp -> simple-exp addop term | term
addop -> _plus | _minus
term -> term mulop factor | factor
mulop -> _multiply | _divide | _mod | _power
factor -> _left_paren exp _right_paren | _number | _identifier
